clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr93249.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr93249.c" (c, x86_64-unknown-linux-gnu)
global __const.foo.d : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Array([CirInt { ty: Named("s8i"), value: "0" }, CirInt { ty: Named("s8i"), value: "17" }]), trailing_zeros_num: 0 } [cir_private, default, dso_local, constant]
global b : s8i[4] = Zero { ty: Array { element_type: Named("s8i"), size: 4 } } [external, default, align 1, dso_local]
global a : s8i[2] = Zero { ty: Array { element_type: Named("s8i"), size: 2 } } [external, default, align 1, dso_local]
global .str : s8i[3] = ConstArray { ty: Array { element_type: Named("s8i"), size: 3 }, elts: Str("\0\u{11}"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global c : s8i[6] = Zero { ty: Array { element_type: Named("s8i"), size: 6 } } [external, default, align 1, dso_local]
global .str.1 : s8i[5] = ConstArray { ty: Array { element_type: Named("s8i"), size: 5 }, elts: Str("\u{11}\u{11}\0\u{11}"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn strncpy(%arg0: s8i*, %arg1: s8i*, %arg2: u64i) -> s8i* [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn foo() -> void [external, c, no_inline, dso_local, nothrow] {
        %109 = alloca s8i[2], "d", align 1
        %110 = get_global @__const.foo.d : s8i[2]*
        copy
        %111 = const 2 : s64i
        %112 = get_global @b : s8i[4]*
        get_element
        %114 = cast(array_to_ptrdecay) %109 : s8i*
        %115 = const 2 : u64i
        %116 = call @strncpy(%113, %114, %115) : s8i* [all]
        %117 = const 1 : s64i
        %118 = get_global @b : s8i[4]*
        get_element
        %120 = get_global @a : s8i[2]*
        %121 = cast(array_to_ptrdecay) %120 : s8i*
        %122 = const 2 : u64i
        %123 = call @strncpy(%119, %121, %122) : s8i* [all]
        scope {
                %124 = const 0 : s64i
                %125 = get_global @b : s8i[4]*
                get_element
                %127 = load %126 : s8i, align 1
                %128 = cast(integral) %127 : s32i
                %129 = cast(int_to_bool) %128 : bool
                %130 = ternary %129 ? { : bool
                        %153 = const true : bool
                        yield %153
                } : {
                        %147 = const 1 : s64i
                        %148 = get_global @b : s8i[4]*
                        get_element
                        %150 = load %149 : s8i, align 1
                        %151 = cast(integral) %150 : s32i
                        %152 = cast(int_to_bool) %151 : bool
                        yield %152
                }
                %131 = ternary %130 ? { : bool
                        %146 = const true : bool
                        yield %146
                } : {
                        %140 = const 2 : s64i
                        %141 = get_global @b : s8i[4]*
                        get_element
                        %143 = load %142 : s8i, align 1
                        %144 = cast(integral) %143 : s32i
                        %145 = cast(int_to_bool) %144 : bool
                        yield %145
                }
                %132 = ternary %131 ? { : bool
                        %139 = const true : bool
                        yield %139
                } : {
                        %133 = const 3 : s64i
                        %134 = get_global @b : s8i[4]*
                        get_element
                        %136 = load %135 : s8i, align 1
                        %137 = cast(integral) %136 : s32i
                        %138 = cast(int_to_bool) %137 : bool
                        yield %138
                }
                if %132 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn bar() -> void [external, c, no_inline, dso_local, nothrow] {
        %65 = const 2 : s64i
        %66 = get_global @b : s8i[4]*
        get_element
        %68 = get_global @.str : s8i[3]*
        %69 = cast(array_to_ptrdecay) %68 : s8i*
        %70 = const 2 : u64i
        %71 = call @strncpy(%67, %69, %70) : s8i* [all]
        %72 = const 1 : s64i
        %73 = get_global @b : s8i[4]*
        get_element
        %75 = get_global @a : s8i[2]*
        %76 = cast(array_to_ptrdecay) %75 : s8i*
        %77 = const 2 : u64i
        %78 = call @strncpy(%74, %76, %77) : s8i* [all]
        scope {
                %79 = const 0 : s64i
                %80 = get_global @b : s8i[4]*
                get_element
                %82 = load %81 : s8i, align 1
                %83 = cast(integral) %82 : s32i
                %84 = cast(int_to_bool) %83 : bool
                %85 = ternary %84 ? { : bool
                        %108 = const true : bool
                        yield %108
                } : {
                        %102 = const 1 : s64i
                        %103 = get_global @b : s8i[4]*
                        get_element
                        %105 = load %104 : s8i, align 1
                        %106 = cast(integral) %105 : s32i
                        %107 = cast(int_to_bool) %106 : bool
                        yield %107
                }
                %86 = ternary %85 ? { : bool
                        %101 = const true : bool
                        yield %101
                } : {
                        %95 = const 2 : s64i
                        %96 = get_global @b : s8i[4]*
                        get_element
                        %98 = load %97 : s8i, align 1
                        %99 = cast(integral) %98 : s32i
                        %100 = cast(int_to_bool) %99 : bool
                        yield %100
                }
                %87 = ternary %86 ? { : bool
                        %94 = const true : bool
                        yield %94
                } : {
                        %88 = const 3 : s64i
                        %89 = get_global @b : s8i[4]*
                        get_element
                        %91 = load %90 : s8i, align 1
                        %92 = cast(integral) %91 : s32i
                        %93 = cast(int_to_bool) %92 : bool
                        yield %93
                }
                if %87 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn baz() -> void [external, c, no_inline, dso_local, nothrow] {
        %4 = const 2 : s64i
        %5 = get_global @c : s8i[6]*
        get_element
        %7 = get_global @.str.1 : s8i[5]*
        %8 = cast(array_to_ptrdecay) %7 : s8i*
        %9 = const 4 : u64i
        %10 = call @strncpy(%6, %8, %9) : s8i* [all]
        %11 = const 1 : s64i
        %12 = get_global @c : s8i[6]*
        get_element
        %14 = get_global @a : s8i[2]*
        %15 = cast(array_to_ptrdecay) %14 : s8i*
        %16 = const 2 : u64i
        %17 = call @strncpy(%13, %15, %16) : s8i* [all]
        scope {
                %18 = const 0 : s64i
                %19 = get_global @c : s8i[6]*
                get_element
                %21 = load %20 : s8i, align 1
                %22 = cast(integral) %21 : s32i
                %23 = cast(int_to_bool) %22 : bool
                %24 = ternary %23 ? { : bool
                        %64 = const true : bool
                        yield %64
                } : {
                        %58 = const 1 : s64i
                        %59 = get_global @c : s8i[6]*
                        get_element
                        %61 = load %60 : s8i, align 1
                        %62 = cast(integral) %61 : s32i
                        %63 = cast(int_to_bool) %62 : bool
                        yield %63
                }
                %25 = ternary %24 ? { : bool
                        %57 = const true : bool
                        yield %57
                } : {
                        %51 = const 2 : s64i
                        %52 = get_global @c : s8i[6]*
                        get_element
                        %54 = load %53 : s8i, align 1
                        %55 = cast(integral) %54 : s32i
                        %56 = cast(int_to_bool) %55 : bool
                        yield %56
                }
                %26 = ternary %25 ? { : bool
                        %50 = const true : bool
                        yield %50
                } : {
                        %43 = const 3 : s64i
                        %44 = get_global @c : s8i[6]*
                        get_element
                        %46 = load %45 : s8i, align 1
                        %47 = cast(integral) %46 : s32i
                        %48 = const 17 : s32i
                        cmp
                        yield %49
                }
                %27 = ternary %26 ? { : bool
                        %42 = const true : bool
                        yield %42
                } : {
                        %36 = const 4 : s64i
                        %37 = get_global @c : s8i[6]*
                        get_element
                        %39 = load %38 : s8i, align 1
                        %40 = cast(integral) %39 : s32i
                        %41 = cast(int_to_bool) %40 : bool
                        yield %41
                }
                %28 = ternary %27 ? { : bool
                        %35 = const true : bool
                        yield %35
                } : {
                        %29 = const 5 : s64i
                        %30 = get_global @c : s8i[6]*
                        get_element
                        %32 = load %31 : s8i, align 1
                        %33 = cast(integral) %32 : s32i
                        %34 = cast(int_to_bool) %33 : bool
                        yield %34
                }
                if %28 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        call @foo() [all]
        call @bar() [all]
        call @baz() [all]
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
