clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr93434.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr93434.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "k", align 4
        %2 = alloca s32i, "i", align 4
        %3 = alloca s32i, "j", align 4
        %4 = alloca rec_creal_T[16], "t2", align 16
        %5 = alloca double, "inval", align 8
        %6 = const 0 : s32i
        store %6, %0
        %7 = const 1.000000e+00 : double
        store %7, %5, align 8
        scope {
                %85 = const 0 : s32i
                store %85, %3, align 4
                for cond {
                        %100 = load %3 : s32i, align 4
                        %101 = const 16 : s32i
                        cmp
                        condition %102
                } step {
                        %86 = load %3 : s32i, align 4
                        inc
                        store %87, %3, align 4
                        yield
                } body {
                        scope {
                                %88 = const 0 : s32i
                                %89 = cast(int_to_float) %88 : double
                                %90 = load %3 : s32i, align 4
                                %91 = cast(integral) %90 : s64i
                                get_element
                                get_member
                                store %89, %93, align 16
                                %94 = const 0 : s32i
                                %95 = cast(int_to_float) %94 : double
                                %96 = load %3 : s32i, align 4
                                %97 = cast(integral) %96 : s64i
                                get_element
                                get_member
                                store %95, %99, align 8
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %40 = const 0 : s32i
                store %40, %3, align 4
                for cond {
                        %80 = load %3 : s32i, align 4
                        %81 = const 16 : s32i
                        %82 = const 4 : s32i
                        div
                        cmp
                        condition %84
                } step {
                        %41 = load %3 : s32i, align 4
                        inc
                        store %42, %3, align 4
                        yield
                } body {
                        scope {
                                %43 = load %3 : s32i, align 4
                                %44 = const 4 : s32i
                                mul
                                store %45, %2, align 4
                                %46 = load %5 : double, align 8
                                %47 = load %2 : s32i, align 4
                                %48 = cast(integral) %47 : s64i
                                get_element
                                get_member
                                store %46, %50, align 16
                                %51 = load %5 : double, align 8
                                %52 = load %2 : s32i, align 4
                                %53 = cast(integral) %52 : s64i
                                get_element
                                get_member
                                store %51, %55, align 8
                                %56 = load %2 : s32i, align 4
                                %57 = const 3 : s32i
                                %58 = add %56, %57 : s32i [nsw]
                                store %58, %1, align 4
                                %59 = load %5 : double, align 8
                                %60 = load %1 : s32i, align 4
                                %61 = cast(integral) %60 : s64i
                                get_element
                                get_member
                                store %59, %63, align 16
                                %64 = load %5 : double, align 8
                                %65 = load %1 : s32i, align 4
                                %66 = cast(integral) %65 : s64i
                                get_element
                                get_member
                                store %64, %68, align 8
                                %69 = load %2 : s32i, align 4
                                %70 = cast(integral) %69 : s64i
                                get_element
                                %72 = load %1 : s32i, align 4
                                %73 = cast(integral) %72 : s64i
                                get_element
                                copy
                                %75 = load %5 : double, align 8
                                %76 = load %1 : s32i, align 4
                                %77 = cast(integral) %76 : s64i
                                get_element
                                get_member
                                store %75, %79, align 16
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %10 = const 0 : s32i
                store %10, %2, align 4
                for cond {
                        %37 = load %2 : s32i, align 4
                        %38 = const 2 : s32i
                        cmp
                        condition %39
                } step {
                        %11 = load %2 : s32i, align 4
                        inc
                        store %12, %2, align 4
                        yield
                } body {
                        scope {
                                %13 = load %2 : s32i, align 4
                                %14 = cast(integral) %13 : s64i
                                get_element
                                get_member
                                %17 = load %16 : double, align 16
                                %18 = load %2 : s32i, align 4
                                %19 = cast(int_to_bool) %18 : bool
                                not
                                %21 = cast(bool_to_int) %20 : s32i
                                %22 = cast(int_to_float) %21 : double
                                cmp
                                %24 = ternary %23 ? { : bool
                                        %36 = const true : bool
                                        yield %36
                                } : {
                                        %25 = load %2 : s32i, align 4
                                        %26 = cast(integral) %25 : s64i
                                        get_element
                                        get_member
                                        %29 = load %28 : double, align 8
                                        %30 = load %2 : s32i, align 4
                                        %31 = cast(int_to_bool) %30 : bool
                                        not
                                        %33 = cast(bool_to_int) %32 : s32i
                                        %34 = cast(int_to_float) %33 : double
                                        cmp
                                        yield %35
                                }
                                if %24 {
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %8 = const 0 : s32i
        store %8, %0
        %9 = load %0 : s32i
        return %9
}
